Fix table overflow

--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -53,6 +53,8 @@ table {
     margin-bottom: 1.5rem;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
+    display: block;
+    overflow-x: auto;
 }
 thead {
     border-bottom: 0.0625rem;
